chore: update staging (#295)
* chore(main): release 1.2.0 (#216)

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

* feat: about section on subdomain loads (#263)

Without this people see  confusing button to click, and some
configuration, but have no idea what is happening.

Co-authored-by: Russell Dempsey <1173416+SgtPooki@users.noreply.github.com>

* fix: remove fonts except woff2 (#282)

* fix: add purgecss webpack plugin

* fix: keep only woff2 font, remove purgeCss

* chore: improve LCP performance (#293)

---------

Co-authored-by: Marcin Rataj <lidel@lidel.org>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Daniel Norman <1992255+2color@users.noreply.github.com>

--- a/src/pages/default-page-styles.css
+++ b/src/pages/default-page-styles.css
@@ -1,2 +1,5 @@
 @import 'tachyons';
 @import 'ipfs-css';
+
+/* ensure we don't fetch any external fonts */
+.sans-serif { font-family: system-ui, sans-serif; }
